--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,213 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+/* App.css */
+.app {
+  display: flex;
   min-height: 100vh;
+  min-width: 100%;
+  font-family: sans-serif;
+}
+.navbar{
+  /* height: 60px; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 30px 20px 50px ;
+  box-shadow: -4px -1px 6px 3px;
+}
+
+.sidebar {
+  width: 200px;
+  background-color: #fffefe;
+  /* color: #fff; */
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  margin-top: 5px;
+}
+
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar li {
+  display: flex;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 10px;
+  cursor: pointer;
+  margin: 10px;
+  font-weight: 600;
+}
+.icon{
+  margin-right: 10px;
+  font-size: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+
+.sidebar li.active {
+  background-color: #8bbdeb;
+  color: #0664f6;
+  border-right: 4px solid #0664f6;
+  margin-right: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.status-options ul {
+  display: flex;
+    flex-direction: row;
+    list-style: none;
+    /* padding: 0; */
+    justify-content: space-between;
+    width: 50%;
+}
+@media only screen and (max-width: 768px) {
+  .status-options ul{
+    width: 80%;
+
   }
-  to {
-    transform: rotate(360deg);
+  
+}
+@media only screen and (max-width: 986px) {
+  .status-options ul{
+    width: 60%;
   }
+}
+.status-options li {
+  margin-bottom: 10px;
+  cursor: pointer;
+  font-weight: 600;
+}
+.status-options li.selected {
+  color: #0664f6;
+  border-bottom: 3px solid #0664f6;
+  padding-bottom:5px ;
+}
+.main-container{
+  display: flex;
+  flex-direction: column;
+  background-color: #d2d2d250;
+  width: 100%;
+}
+.opened-page p{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+    background-color: #fff;
+    width: 100px;
+    padding: 10px;
+    text-align: center;
+    font-weight: 500;
+    /* border-radius: 6px; */
+    margin-left: 5px;
+    color: #0664f6;
+}
+.table-contianer{
+  /* width: 100%; */
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 20px;
+  margin: 5px;
+  overflow-y: scroll;
+  
+}
+a{
+  color: #0664f6;
+}
+.order-table thead{
+  background-color: #d2d2d250;
+  
+}
+.order-table th {
+  border-bottom: 2px solid #ccc;
+  width: 165px;
+  height: 75px;
+}
+
+
+.order-table td {
+  border-bottom: 1px solid #ccc;
+}
+/* .order-table thead th{
+  width: 165px;
+  height: 75px;
+} */
+tbody tr td {
+text-align: center;
+}
+select{
+  padding: 5px;
+  border-color: #ebebeb;
+}
+button{
+  background-color: #959595;
+  border: 1px solid;
+  padding: 5px 10px;
+}
+.button-container{
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 20px 20px 0px;
+  
+}
+.button-container div {
+  display: flex;
+  /* justify-content: space-between; */
+  width: 40%;
+}
+.button-container div button{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 18px;
+  background-color: #ebebeb;
+  color: #c7c5c5;
+  border: 1px solid #160a0a30;
+  margin-right: 20px;
+}
+.input-button{
+  background-color: transparent !important;
+  color: #000 !important;
+}
+.refresh-button{
+    background-color: #0664f6;
+    padding: 10px;
+    border: none;
+    color: #fff;
+    width: 114px;
+    font-size: 18px;
+}
+.pagination{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+p{
+  border: 1px solid #0664f6;
+  padding: 10px 15px;
+  font-size: 14px;
+  color: #0664f6;
+}
+.pagination button{
+  background-color: transparent;
+  border: 1px solid;
+  padding: 10px;
+  font-size: 15px;
+  margin: 5px;
+  cursor: pointer;
+}
+hr{
+  width: 100%;
+
+}
+.order-pending{
+  /* height: 12px; */
+  border: 2px solid #78ec88;
+  /* padding: 0px; */
+  background-color: #e1f9e4;
+  color: #90d786;
+  font-weight: 600;
+  font-size: 15px
 }
